--- a/src/app/projects/lumina/page.mdx
+++ b/src/app/projects/lumina/page.mdx
@@ -4,8 +4,8 @@ import { CodeBlock } from "@/components/CodeBlock";
 import { Activity, Server, Shield, Zap } from "lucide-react";
 
 export const metadata = {
-  title: 'Project Lumina | Odey Jeffs',
-  description: 'Real-Time Operational Monitor deep dive.',
+  title: 'Project Lumina | Lumina Quant Fund',
+  description: 'High-frequency quantitative trading engine performance and strategy.',
 }
 
 <div className="space-y-8">
@@ -14,17 +14,22 @@ export const metadata = {
   <div className="space-y-4">
     <div className="flex items-center space-x-2 text-primary">
         <Activity className="w-6 h-6" />
-        <span className="text-sm font-mono tracking-wider uppercase">Operational Monitor</span>
+        <span className="text-sm font-mono tracking-wider uppercase">Lumina Quant Fund</span>
     </div>
     <h1 className="text-4xl md:text-5xl font-bold tracking-tight">Project Lumina</h1>
     <p className="text-xl text-muted-foreground max-w-2xl">
-      A high-availability operational monitoring system designed to process massive telemetry streams in real-time. (Working on Mobile App).
+      A high-frequency quantitative trading engine utilizing mean reversion strategies paired with earnings report volatility to consistently outperform the market.
     </p>
-    <div className="flex gap-2 pt-2">
+    <div className="flex flex-wrap gap-2 pt-2">
         <Badge variant="secondary" className="px-3">C++20</Badge>
-        <Badge variant="secondary" className="px-3">React Native</Badge>
-        <Badge variant="secondary" className="px-3">AWS</Badge>
+        <Badge variant="secondary" className="px-3">Quantitative Analysis</Badge>
+        <Badge variant="secondary" className="px-3">HFT</Badge>
         <Badge variant="outline" className="px-3">Active</Badge>
+        <a href="https://luminafund.vercel.app/" target="_blank" rel="noopener noreferrer">
+            <Button variant="outline" size="sm" className="h-7 text-xs font-mono border-primary/50 text-primary hover:bg-primary/10 transition-all">
+                LIVE_FUND_TRACKER_URL
+            </Button>
+        </a>
     </div>
   </div>
 
@@ -76,7 +81,7 @@ export const metadata = {
             </h2>
             <BacktestChart />
             <p className="mt-4 text-muted-foreground">
-                The chart above demonstrates the system's ability to maintain high operational efficiency (Alpha) even during bursts of high data throughput.
+                The chart above demonstrates the strategy's ability to capture alpha by identifying mean reversion opportunities during high-volatility events like earnings reports.
             </p>
         </Card>
 
@@ -102,19 +107,19 @@ export const metadata = {
     <div className="space-y-6">
         <Card>
             <CardHeader>
-                <CardTitle>Technical Deep Dive</CardTitle>
+                <CardTitle>Trading Strategy</CardTitle>
             </CardHeader>
             <CardContent className="space-y-4">
                 <div className="space-y-2">
-                    <h3 className="font-semibold text-foreground">Zero-Copy Ingest</h3>
+                    <h3 className="font-semibold text-foreground">Mean Reversion</h3>
                     <p className="text-sm text-muted-foreground">
-                        We utilize a ring-buffer architecture to ensure data flows from the sensor ingest layer to the operational dashboard without expensive memory copying.
+                        Our core engine identifies statistical deviations from historical price means, executing high-conviction trades when assets are temporarily mispriced.
                     </p>
                 </div>
                 <div className="space-y-2">
-                    <h3 className="font-semibold text-foreground">Cache Alignment</h3>
+                    <h3 className="font-semibold text-foreground">Earnings Catalyst</h3>
                     <p className="text-sm text-muted-foreground">
-                        Critical operational data packets are 64-byte aligned to prevent false sharing in the CPU cache, ensuring deterministic processing times.
+                        We prioritize mean reversion signals that coincide with earnings reports, leveraging the heightened volatility to capture rapid price adjustments.
                     </p>
                 </div>
             </CardContent>
