Fix UI component import paths - use lowercase filenames

--- a/src/app/projects/artemis/page.mdx
+++ b/src/app/projects/artemis/page.mdx
@@ -1,9 +1,9 @@
 import { MermaidDiagram } from "@/components/MermaidDiagram";
 import { ArtemisChart } from "@/components/ArtemisChart";
 import { CodeBlock } from "@/components/CodeBlock";
-import { Badge } from "@/components/ui/Badge";
-import { Button } from "@/components/ui/Button";
-import { Card, CardHeader, CardTitle, CardContent } from "@/components/ui/Card";
+import { Badge } from "@/components/ui/badge";
+import { Button } from "@/components/ui/button";
+import { Card, CardHeader, CardTitle, CardContent } from "@/components/ui/card";
 import { Shield, Cpu, Activity, Zap, Server, Search, BarChart3, Lock, ZapOff } from "lucide-react";
 
 export const metadata = {
