--- a/src/app/projects/lumina/page.mdx
+++ b/src/app/projects/lumina/page.mdx
@@ -1,8 +1,8 @@
 import { MermaidDiagram } from "@/components/MermaidDiagram";
 import { CodeBlock } from "@/components/CodeBlock";
-import { Badge } from "@/components/ui/Badge";
-import { Button } from "@/components/ui/Button";
-import { Card, CardHeader, CardTitle, CardContent } from "@/components/ui/Card";
+import { Badge } from "@/components/ui/badge";
+import { Button } from "@/components/ui/button";
+import { Card, CardHeader, CardTitle, CardContent } from "@/components/ui/card";
 import { TrendingUp, Target, Clock, Zap, Globe, Shield, Activity, BarChart3, Database } from "lucide-react";
 
 export const metadata = {
