Update link to Lumina Fund Tracker

--- a/src/app/projects/lumina/page.mdx
+++ b/src/app/projects/lumina/page.mdx
@@ -42,7 +42,7 @@ export const metadata = {
         </div>
 
         <div className="pt-4">
-            <a href="https://luminafund.vercel.app/" target="_blank" rel="noopener noreferrer">
+            <a href="https://financiallumina.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <Button className="bg-primary text-black hover:bg-primary/90 font-bold px-8 h-12 rounded-none group transition-all">
                     VIEW LIVE FUND TRACKER
                     <Zap className="ml-2 w-4 h-4 group-hover:fill-current transition-all" />
